# yoloop

./: Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
docs/: ARCHITECTURE.html  ARCHITECTURE.md  ROADMAP.html  ROADMAP.md
plugins/yoloop/: README.md
plugins/yoloop/.claude-plugin/: plugin.json
plugins/yoloop/.codex-plugin/: plugin.json
plugins/yoloop/commands/: accept-goal.md  adapter-run.md  context-refresh.md  decomposition-write-verdict.md  doctor.md  grand-jury-write-verdict.md  init.md  log-append.md  pause.md  resume.md  run-until-done.md  run.md  status.md
plugins/yoloop/hooks/: hooks.json
plugins/yoloop/skills/using-yoloop/: SKILL.md
schemas/: adapters.schema.json  critic-verdict.schema.json  loop-policy.schema.json  tasks.schema.json
src/: adapters.rs  adapters.ts  app.rs  app.ts  checks.ts  cli.rs  cli.ts  context.ts  decomposition.ts  errors.ts  fsio.rs  grandJury.ts  hooks.rs  hooks.ts  install.ts  io.ts  logs.ts  main.rs  main.ts  models.rs  orchestrator.ts  paths.rs  paths.ts  runner.ts  schemas.ts  tasks.rs  tasks.ts  templates.rs  templates.ts  tests.ts  verdicts.rs  verdicts.ts
